# memwire

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  RFC_TEMPLATE.md  ROADMAP.md  SECURITY.md  TASK_MULTI_USER_HIERARCHY.md  alembic.ini  chat.py  chat_azure.py  docker-compose.build.yaml  docker-compose.infra.yaml  docker-compose.yaml  docker-compose.yml  memwire.sh  pyproject.toml  requirements.txt  test_quickstart.py  web_chat_azure.py
.github/workflows/: release.yml  workflow.yml
api/: .env.ollama  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  sample.env
api/app/: config.py  db_session.py  main.py
api/app/routers/: __init__.py  api_keys.py  knowledge.py  memory.py  settings.py
api/app/schemas/: __init__.py  agent_schemas.py  context_schemas.py  knowledge_schemas.py  memory_schemas.py  settings_schemas.py
api/app/services/: __init__.py  agent_service.py  context_service.py  knowledge_service.py  llm_service.py  memory_service.py
api/app/utils/: __init__.py  api_keys.py
api/migrations/: env.py
api/migrations/versions/: 0001_initial_schema.py
benchmark/: __init__.py  __main__.py  config.py  evaluator.py  locomo_runner.py  locomo_web_benchmark.py  run.py  utils.py
docker/: init-db.sh
docs/: .mintignore  README.md  configuration.mdx  development.mdx  docs.json  embedders.mdx  index.mdx  llms.mdx  mint.json  quickstart.mdx  vector-databases.mdx
docs/api-reference/: introduction.mdx  openapi.json
docs/api-reference/endpoint/: knowledge-add.mdx  knowledge-delete.mdx  knowledge-search.mdx  recall.mdx  search.mdx  store.mdx
docs/embedders/: fastembed.mdx
docs/features/: adaptive-feedback.mdx  graph-memory.mdx  hybrid-search.mdx  knowledge-base.mdx  llm-free-classification.mdx  multi-tenancy.mdx  overview.mdx  reranker.mdx
docs/llms/: azure-openai.mdx  openai.mdx
docs/vector-databases/: qdrant.mdx
examples/: Dockerfile  README.md  chat.py  chat_azure.py  docker-compose.yml  sdk_basic.py  web_chat.py  web_chat_azure.py
examples/azure-openai/: .env.example  Dockerfile  README.md  docker-compose.yml  web_chat.py
examples/basic-usage/: sdk_anchors.py  sdk_basic.py  sdk_chat.py  sdk_ingest.py  sdk_knowledge.py  sdk_multi_user.py
examples/openai/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt  web_chat.py
memwire/: __init__.py  config.py
memwire/api/: __init__.py  client.py  formatter.py
memwire/core/: __init__.py  classifier.py  embeddings.py  engine.py  feedback.py  graph.py  providers.py  recall.py  reranker.py
memwire/migrations/: env.py
memwire/server/: __init__.py  app.py  auth.py  config_store.py  llm.py  schemas.py
memwire/storage/: __init__.py  database.py  models.py  qdrant_store.py  vector_ops.py
memwire/utils/: __init__.py  math_ops.py  tokenizer.py  types.py
sdk/python/: pyproject.toml
sdk/python/memwire_sdk/: __init__.py  client.py  types.py
studio/: index.html  package-lock.json  package.json  vite.config.ts
studio/src/: App.tsx  main.tsx  router.tsx
tests/: conftest.py  test_basic_api.py  test_classification.py  test_edge_cases.py  test_feedback.py  test_graph.py  test_hierarchy.py  test_knowledge.py  test_known_weaknesses.py  test_multi_user.py  test_persistence.py  test_recall_relevance.py  test_recency.py  test_scale.py  test_semantic_understanding.py  test_server.py  test_tension_detection.py
ui/: Dockerfile  generate-runtime-config.sh  index.html  nginx.conf  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
web_chat_qdrant/: meta.json
(+49 files in other folders)
