[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "memwire-api"
version = "0.1.0"
description = "MemWire — Memory Infrastructure API for AI Agents"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
