[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memwire-sdk"
version = "0.3.0"
description = "Python SDK for the MemWire REST API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["memwire_sdk*"]
